--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
 body {
   background: var(--bg);
   color: var(--text);
-  padding: 24px;
   line-height: 1.55;
   -webkit-font-smoothing: antialiased;
 }
 
 .container {
   max-width: 1100px;
-  margin: auto;
+  margin: 0 auto;
+  padding: 24px;
 }
 
 /* ============================================================================ */
@@ -75,30 +75,41 @@ html[data-theme="dark"] {
 }
 
 /* ============================================================================ */
-/* ✅ HEADER + NAVIGATION */
+/* ✅ NEW STICKY HEADER — ALWAYS VISIBLE */
 /* ============================================================================ */
-.header {
+#mainHeader {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 8px;
-  flex-wrap: wrap;
+  padding: 18px 32px;
+  background: var(--bg);
+  border-bottom: 1px solid var(--border);
+  position: sticky;
+  top: 0;
+  z-index: 999;
 }
 
-.logo {
-  font-size: 36px;
+#novakBrand {
+  font-size: 26px;
   font-weight: 700;
   color: var(--blue);
-  letter-spacing: 0.2px;
   user-select: none;
+  white-space: nowrap;
+}
+
+/* Desktop controls */
+#headerControls {
+  display: flex;
+  align-items: center;
+  gap: 14px;
 }
 
 .theme-toggle {
   cursor: pointer;
   font-size: 14px;
-  border: 1px solid var(--blue);
   padding: 7px 14px;
   border-radius: 6px;
+  border: 1px solid var(--blue);
   background: transparent;
   color: var(--blue);
   transition: 0.25s;
@@ -109,29 +120,23 @@ html[data-theme="dark"] {
   color: #fff;
 }
 
-/* Audience selector */
-.nav {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 8px;
-  margin: 14px 0;
-}
-
-.nav button {
-  border: 1px solid var(--blue);
-  background: transparent;
-  padding: 9px 16px;
-  border-radius: 6px;
+/* Mobile menu button (hidden desktop) */
+#mobileMenuBtn {
+  display: none;
+  font-size: 26px;
+  background: none;
+  border: none;
   cursor: pointer;
-  color: var(--blue);
-  transition: 0.25s;
-  font-size: 14px;
 }
 
-.nav button.active,
-.nav button:hover {
-  background: var(--blue);
-  color: white;
+/* Mobile dropdown panel */
+#mobileMenuPanel {
+  display: none;
+  flex-direction: column;
+  background: var(--bg);
+  border-bottom: 1px solid var(--border);
+  padding: 14px 22px;
+  gap: 10px;
 }
 
 /* ============================================================================ */
@@ -151,41 +156,6 @@ html[data-theme="dark"] {
   margin-bottom: 14px;
 }
 
-/* Analogy buttons */
-.explain-btn {
-  border: 1px solid var(--blue);
-  background: transparent;
-  padding: 9px 16px;
-  border-radius: 22px;
-  cursor: pointer;
-  font-size: 14px;
-  display: flex;
-  align-items: center;
-  gap: 6px;
-  color: var(--blue);
-  transition: 0.25s;
-}
-
-.explain-btn:hover {
-  background: rgba(26,79,179,0.1);
-}
-
-/* Primary action */
-.action-btn {
-  padding: 9px 16px;
-  border-radius: 6px;
-  border: none;
-  cursor: pointer;
-  background: var(--blue);
-  color: #fff;
-  font-size: 14px;
-  transition: 0.25s;
-}
-
-.action-btn:hover {
-  background: var(--blue-hover);
-}
-
 /* ============================================================================ */
 /* ✅ ACCESSIBILITY */
 /* ============================================================================ */
@@ -194,12 +164,46 @@ html[data-theme="dark"] {
   border-radius: 6px;
 }
 
-@media (max-width: 600px) {
-  body { padding: 16px; }
-  .logo { font-size: 30px; }
+/* ============================================================================ */
+/* ✅ MOBILE RESPONSIVENESS */
+/* ============================================================================ */
+@media (max-width: 720px) {
+  #headerControls {
+    display: none;
+  }
+  #mobileMenuBtn {
+    display: block;
+  }
+  #novakBrand {
+    font-size: 22px;
+  }
+  .container {
+    padding: 18px;
+  }
 }
 </style>
 </head>
+
+<body>
+
+<!-- ✅ NEW FIXED HEADER -->
+<header id="mainHeader">
+  <div id="novakBrand">NOVAK Protocol™</div>
+
+  <div id="headerControls">
+    <button class="theme-toggle" onclick="toggleTheme()">Light/Dark</button>
+  </div>
+
+  <button id="mobileMenuBtn" onclick="toggleMobileMenu()">☰</button>
+</header>
+
+<!-- ✅ Mobile Dropdown -->
+<div id="mobileMenuPanel">
+  <button class="theme-toggle" onclick="toggleTheme()">Light/Dark Mode</button>
+</div>
+
+<!-- ✅ Begin Main Page Content -->
+<div class="container">
 
 <!-- ✅ END PART 1 — DO NOT CLOSE BODY OR HTML -->
 
