--- a/index.html
+++ b/index.html
@@ -120,16 +120,16 @@ html[data-theme="dark"] {
   color: #fff;
 }
 
-/* Mobile menu button (hidden desktop) */
+/* Mobile menu button */
 #mobileMenuBtn {
   display: none;
-  font-size: 26px;
+  font-size: 28px;
   background: none;
   border: none;
   cursor: pointer;
 }
 
-/* Mobile dropdown panel */
+/* Mobile dropdown */
 #mobileMenuPanel {
   display: none;
   flex-direction: column;
@@ -182,30 +182,8 @@ html[data-theme="dark"] {
   }
 }
 </style>
-</head>
+</hea
 
-<body>
-
-<!-- ✅ NEW FIXED HEADER -->
-<header id="mainHeader">
-  <div id="novakBrand">NOVAK Protocol™</div>
-
-  <div id="headerControls">
-    <button class="theme-toggle" onclick="toggleTheme()">Light/Dark</button>
-  </div>
-
-  <button id="mobileMenuBtn" onclick="toggleMobileMenu()">☰</button>
-</header>
-
-<!-- ✅ Mobile Dropdown -->
-<div id="mobileMenuPanel">
-  <button class="theme-toggle" onclick="toggleTheme()">Light/Dark Mode</button>
-</div>
-
-<!-- ✅ Begin Main Page Content -->
-<div class="container">
-
-<!-- ✅ END PART 1 — DO NOT CLOSE BODY OR HTML -->
 
 <!-- ✅ PART 2 — AUDIENCE SELECTION & RESPONSIVE MESSAGING -->
 
