--- a/index.html
+++ b/index.html
@@ -277,6 +277,65 @@ aria-label="Dismiss Why Novak section">
 
 <!-- ✅ END PART 2 — CONTINUE WITH PART 3 NEXT -->
 
+<!-- ✅ PART 3 — WHAT CHANGES WITH NOVAK? (Dismissible + Restorable) -->
+<div id="whatChangesCard" class="card" style="margin-top:32px; position:relative;">
+  <h2 class="section-title">What Changes With NOVAK?</h2>
+
+  <p>
+    Most systems today rely on logging <strong>after</strong> something already happened.
+    NOVAK requires proof <strong>before</strong> action.
+  </p>
+
+  <div style="margin-top:14px;">
+    <p style="color:var(--red); font-weight:600; margin-bottom:6px;">❌ Without NOVAK</p>
+    <p style="margin-bottom:14px;">
+      System executes even if data is wrong — Hash exists but cannot stop harm — Fraud discovered weeks or years later —
+      No mathematical guarantee of legality — Human trust required
+    </p>
+
+    <p style="color:var(--green); font-weight:600; margin-bottom:6px;">✅ With NOVAK</p>
+    <p>
+      Proof required before action — Data, rules & output cryptographically bound —
+      Fraud blocked instantly — Evidence auto-generated —
+      Trust replaced with math
+    </p>
+  </div>
+
+  <!-- ✅ Close X button -->
+  <button onclick="dismissWhatChanges()" style="
+    position:absolute;
+    top:14px;
+    right:14px;
+    font-size:20px;
+    background:none;
+    border:none;
+    cursor:pointer;
+  " aria-label="Hide What Changes With NOVAK">✕</button>
+
+  <!-- ✅ User confirmation hide -->
+  <button class="action-btn" onclick="dismissWhatChanges()" style="margin-top:18px;">
+    ✅ Got it — Hide
+  </button>
+</div>
+
+<!-- ✅ Restore button (hidden until needed) -->
+<div style="display:flex; justify-content:center; margin-top:10px;">
+  <button id="restoreWhatBtn"
+    onclick="restoreWhatChangesSection()"
+    style="
+      display:none;
+      padding:8px 18px;
+      border-radius:8px;
+      border:1px solid var(--border);
+      background:var(--btn-bg);
+      cursor:pointer;
+      font-size:14px;
+    ">
+    🔄 Show “What Changes With NOVAK?”
+  </button>
+</div>
+
+  
 <!-- ✅ PART 3 — WHY NOVAK — WHY NOW? (Dismissible, Restorable) -->
 <div id="whyNovakCard" class="card" style="margin-top:32px; position:relative;">
   <h2 class="section-title">Why NOVAK — Why Now?</h2>
