--- a/index.html
+++ b/index.html
@@ -366,4 +366,56 @@ html[data-theme="dark"] {
   </button>
 </div>
 
+ <!-- ✅ PART 4 of 8 — Input, Live Hashing Engine, RGAC & File Integrity -->
+
+<!-- ✅ USER INPUT TEXTAREA -->
+<div class="card" style="margin-top:32px;">
+  <h2 class="section-title">Try It — Prove Integrity Yourself</h2>
+  <p>
+    Type, paste, or edit anything below. Hashes update instantly using real cryptography —
+    nothing is stored, logged, or transmitted.
+  </p>
+
+  <textarea id="novakInput"
+    placeholder="Example: VA claim, invoice, medical note, VIN, contract, JSON, SQL, XML..."
+    style="width:100%; height:170px; margin-top:16px; font-family:'JetBrains Mono', monospace; font-size:14px; padding:12px;">
+  </textarea>
+</div>
+
+<!-- ✅ LIVE HASH OUTPUT -->
+<div class="card" style="margin-top:20px;">
+  <h3 class="section-title" style="font-size:20px;">Cryptographic Hashes</h3>
+
+  <div id="hashOutputList"
+       style="margin-top:10px; font-family:'JetBrains Mono', monospace; font-size:14px;">
+    <em>Waiting for input from above...</em>
+  </div>
+</div>
+
+<!-- ✅ RGAC MINI-CHAIN VISUALIZATION -->
+<div class="card" style="margin-top:20px;">
+  <h3 class="section-title" style="font-size:20px;">RGAC — Recursive Global Audit Chain</h3>
+  <p style="margin-bottom:12px;">
+    Each output becomes input to the next verification — forming an unstoppable integrity chain.
+  </p>
+  <div id="rgac" style="font-family:'JetBrains Mono', monospace; font-size:14px;">
+    <em>Provide input to begin...</em>
+  </div>
+</div>
+
+<!-- ✅ FILE INTEGRITY VERIFICATION -->
+<div class="card" style="margin-top:20px;">
+  <h3 class="section-title" style="font-size:20px;">Verify Any File</h3>
+  <p>Drop a document, medical record, CSV, log, policy, or contract — NOVAK proves originality instantly.</p>
+
+  <div id="dropzone"
+       style="margin-top:14px; padding:22px; border:2px dashed var(--border); border-radius:10px; text-align:center; cursor:pointer;">
+    📁 Drop file here or click to select
+    <input id="fileInput" type="file" style="display:none" />
+  </div>
+
+  <div id="fileHashResult"
+       style="margin-top:16px; font-family:'JetBrains Mono', monospace; font-size:14px;"></div>
+</div>
+
   
