--- a/index.html
+++ b/index.html
@@ -418,4 +418,47 @@ html[data-theme="dark"] {
        style="margin-top:16px; font-family:'JetBrains Mono', monospace; font-size:14px;"></div>
 </div>
 
+<!-- ✅ PART 5 of 8 — Example Datasets + VIN Decoder Modal -->
+
+<!-- ✅ EXAMPLE DATASETS CARD -->
+<div class="card" style="margin-top:32px;">
+  <h2 class="section-title">Example Datasets</h2>
+  <p>Select one to auto-populate the input box above.</p>
+
+  <div style="display:flex; flex-wrap:wrap; gap:12px; margin-top:16px;">
+    <button class="explain-btn" onclick="loadExample('va')">🎖️ VA Disability Claim</button>
+    <button class="explain-btn" onclick="loadExample('medical')">🏥 Medical Note</button>
+    <button class="explain-btn" onclick="loadExample('finance')">💰 Financial Transaction</button>
+    <button class="explain-btn" onclick="loadExample('robot')">🤖 Robotics Command</button>
+    <button class="explain-btn" onclick="loadExample('ai')">🧠 AI System Log</button>
+    <button class="explain-btn" onclick="loadExample('legal')">⚖️ Legal Filing</button>
+    <button class="explain-btn" onclick="openVinModal()">🚗 2022 Corvette VIN</button>
+  </div>
+</div>
+
+<!-- ✅ VIN DECODER MODAL -->
+<div id="vinModal"
+     style="display:none; position:fixed; top:0; left:0; width:100%; height:100%;
+            background:rgba(0,0,0,.55); justify-content:center; align-items:center; z-index:9999;">
+  <div style="background:var(--card); padding:26px; border-radius:10px; width:440px;
+              border:1px solid var(--border); box-shadow:0 4px 18px rgba(0,0,0,.35);">
+
+    <h3 class="section-title" style="font-size:20px;">2022 Corvette VIN Decoder</h3>
+
+    <input id="vinInput"
+           placeholder="Enter VIN (e.g., 1G1YB3D46N5123456)"
+           maxlength="17"
+           style="margin-top:14px; width:100%; padding:10px;
+                  border:1px solid var(--border); border-radius:6px;
+                  font-family:'JetBrains Mono', monospace; font-size:15px;">
+
+    <div id="vinResult"
+         style="margin-top:16px; font-family:'JetBrains Mono', monospace; font-size:14px;"></div>
+
+    <button onclick="closeVinModal()" class="action-btn" style="margin-top:18px; width:100%;">
+      Close
+    </button>
+  </div>
+</div>
+
   
