--- a/index.html
+++ b/index.html
@@ -544,4 +544,38 @@ html[data-theme="dark"] {
        style="margin-top:16px; font-family:'JetBrains Mono', monospace; font-size:14px; white-space:pre-wrap;"></pre>
 </div>
 
-  
+ <!-- ✅ PART 8 of 8 — Guided Demo + Federal Briefing Sheet Export -->
+
+<!-- ✅ AUTO-SCROLL STORY MODE -->
+<div class="card" style="margin-top:36px;">
+  <h2 class="section-title">Guided NOVAK Walkthrough</h2>
+  <p>Let NOVAK teach itself — step-by-step, automatically.</p>
+
+  <button class="action-btn"
+          onclick="startStoryMode()"
+          style="margin-top:12px;">
+    ▶ Begin Guided Demo
+  </button>
+</div>
+
+<!-- ✅ STORY MODE TEXT PANEL -->
+<div id="storyPanel"
+     class="card"
+     style="display:none; margin-top:20px; font-size:15px; line-height:1.6;">
+</div>
+
+<!-- ✅ DOJ / FEDERAL BRIEFING SHEET GENERATOR -->
+<div class="card" style="margin-top:36px;">
+  <h2 class="section-title">Generate Federal Briefing Sheet</h2>
+  <p>
+    Exports a clean, formal one-page NOVAK summary
+    for policymakers, agency leadership, or executive briefings.
+  </p>
+
+  <button class="action-btn"
+          onclick="exportBriefing()"
+          style="margin-top:12px;">
+    📄 Export Briefing Sheet
+  </button>
+</div>
+ 
