--- a/index.html
+++ b/index.html
@@ -579,7 +579,337 @@ html[data-theme="dark"] {
   </button>
 </div>
  
-// ✅ Guided Storytelling Script
+<script>
+// ================================================================
+// ✅ GLOBAL STATE
+// ================================================================
+let currentAudience = "public";
+let soundEnabled = false;
+let storyIndex = 0;
+let storyInterval;
+
+// ================================================================
+// ✅ THEME TOGGLE — Light / Dark
+// ================================================================
+function toggleTheme() {
+  const html = document.documentElement;
+  const newTheme = html.getAttribute("data-theme") === "light" ? "dark" : "light";
+  html.setAttribute("data-theme", newTheme);
+  localStorage.setItem("novakTheme", newTheme);
+}
+
+// Restore saved theme on load
+(function () {
+  const saved = localStorage.getItem("novakTheme");
+  if (saved) document.documentElement.setAttribute("data-theme", saved);
+})();
+
+// ================================================================
+// ✅ MOBILE MENU
+// ================================================================
+function toggleMobileMenu() {
+  const m = document.getElementById("mobileMenuPanel");
+  m.style.display = m.style.display === "flex" ? "none" : "flex";
+}
+
+// ================================================================
+// ✅ AUDIENCE ENGINE — Updates Messaging Across Page
+// ================================================================
+const audienceMessages = {
+  public: `NOVAK protects everyday people — ensuring decisions about healthcare, housing, credit, prices, education,
+safety, transportation, and employment cannot be corrupted, miscalculated, or executed without proof.`,
+
+  government: `NOVAK reduces fraud, waste, improper payments, wrongful denials, and mission-threatening automation
+failure — without requiring new agencies, new infrastructure, or new laws. Execution integrity becomes default.`,
+
+  investor: `NOVAK creates a new global integrity layer — reducing enterprise risk, increasing claim defensibility, enabling
+provable AI products, and unlocking trillion-dollar modernization markets in government, finance & healthcare.`,
+
+  cyber: `NOVAK adds a missing pillar to cybersecurity — prevention. No blockchain, no consensus, no latency. Just
+mathematical proof that data, rules & output have not changed — before execution is allowed.`,
+
+  academic: `NOVAK applies deterministic computation, cryptographic binding, verifiable receipts, and recursive
+auditability to eliminate epistemic uncertainty in automated decision systems — at global scale.`
+};
+
+function setAudience(type) {
+  currentAudience = type;
+  document.getElementById("audienceContent").textContent = audienceMessages[type];
+
+  document.querySelectorAll(".aud-btn").forEach(btn => btn.classList.remove("active"));
+  document.getElementById(`btn-${type}`).classList.add("active");
+}
+
+// ================================================================
+// ✅ WHY NOVAK — DISMISS & RESTORE
+// ================================================================
+function dismissWhyNovak() {
+  document.getElementById("whyNovakCard").style.display = "none";
+  document.getElementById("restoreWhyBtn").style.display = "inline-flex";
+  localStorage.setItem("whyNovakDismissed", "true");
+}
+
+function restoreWhyNovakSection() {
+  document.getElementById("whyNovakCard").style.display = "block";
+  document.getElementById("restoreWhyBtn").style.display = "none";
+  localStorage.removeItem("whyNovakDismissed");
+}
+
+function restoreWhyNovakOnLoad() {
+  if (localStorage.getItem("whyNovakDismissed") === "true") {
+    dismissWhyNovak();
+  }
+}
+
+// ================================================================
+// ✅ WHAT CHANGES WITH NOVAK — DISMISS & RESTORE
+// ================================================================
+function dismissWhatChanges() {
+  document.getElementById("whatChangesCard").style.display = "none";
+  document.getElementById("restoreWhatBtn").style.display = "inline-flex";
+  localStorage.setItem("whatChangesDismissed", "true");
+}
+
+function restoreWhatChangesSection() {
+  document.getElementById("whatChangesCard").style.display = "block";
+  document.getElementById("restoreWhatBtn").style.display = "none";
+  localStorage.removeItem("whatChangesDismissed");
+}
+
+function restoreWhatChangesOnLoad() {
+  if (localStorage.getItem("whatChangesDismissed") === "true") {
+    dismissWhatChanges();
+  }
+}
+
+// ================================================================
+// ✅ EXPLAINER SYSTEM
+// ================================================================
+const explainTexts = {
+  simple: "NOVAK is like requiring a receipt before spending, not after — machines must prove correctness first.",
+  milkshake: "If a milkshake spills, it's obvious — but in data systems, corruption is invisible until NOVAK reveals it.",
+  pencil: "You can't un-color a page without leaving marks. NOVAK ensures digital changes always leave evidence.",
+  key: "A house key doesn't open every door — NOVAK ensures only correct data unlocks execution.",
+  gov: "NOVAK could save government billions by preventing improper payments before they occur.",
+  how: "NOVAK binds input, rule, and output together — if anything changes, execution is cryptographically blocked."
+};
+
+function showExplain(key) {
+  const box = document.getElementById("explainerOutput");
+  box.style.display = "block";
+  box.textContent = explainTexts[key] || "Explanation unavailable.";
+  box.scrollIntoView({ behavior: "smooth" });
+}
+
+// ================================================================
+// ✅ REAL HASH ENGINE — Live, Math-Accurate
+// ================================================================
+async function computeHash(algorithm, value) {
+  const data = typeof value === "string"
+    ? new TextEncoder().encode(value)
+    : new Uint8Array(value);
+
+  const digest = await crypto.subtle.digest(algorithm, data);
+
+  return Array.from(new Uint8Array(digest))
+    .map(b => b.toString(16).padStart(2, "0"))
+    .join("");
+}
+
+async function updateHashes() {
+  const input = document.getElementById("novakInput").value.trim();
+  const list = document.getElementById("hashOutputList");
+
+  if (!input) {
+    list.innerHTML = "<em>Waiting for input from above...</em>";
+    document.getElementById("rgac").innerHTML = "<em>Provide input to begin...</em>";
+    return;
+  }
+
+  const algorithms = ["SHA-256", "SHA-512", "SHA-384", "SHA3-256"];
+  list.innerHTML = "";
+
+  for (const algo of algorithms) {
+    const hash = await computeHash(algo, input);
+    list.innerHTML += `
+      <div style="display:flex; align-items:center; gap:10px; margin-bottom:6px;">
+        <strong>${algo}:</strong>
+        <span style="font-family:'JetBrains Mono', monospace;">${hash}</span>
+        <button style="padding:2px 6px;" onclick="navigator.clipboard.writeText('${hash}')">Copy</button>
+      </div>
+    `;
+  }
+
+  updateRGAC(input);
+}
+
+document.getElementById("novakInput")?.addEventListener("input", updateHashes);
+
+// ================================================================
+// ✅ RGAC — Recursive Global Audit Chain Animation
+// ================================================================
+function updateRGAC(value) {
+  const rgac = document.getElementById("rgac");
+
+  if (!value.trim()) {
+    rgac.innerHTML = "<em>Provide input to begin...</em>";
+    return;
+  }
+
+  const segments = ["Data", "Rule", "Output", "Verifier", "Receipt"];
+  rgac.innerHTML = segments
+    .map((label, i) => `<div class="block">${label} #${i + 1}</div>`)
+    .join("");
+}
+
+// ================================================================
+// ✅ FILE HASH VERIFICATION
+// ================================================================
+const dropzone = document.getElementById("dropzone");
+const fileInput = document.getElementById("fileInput");
+const fileHashResult = document.getElementById("fileHashResult");
+
+dropzone?.addEventListener("click", () => fileInput.click());
+
+dropzone?.addEventListener("dragover", e => {
+  e.preventDefault();
+  dropzone.style.background = "rgba(26,79,179,0.07)";
+});
+
+dropzone?.addEventListener("dragleave", () => dropzone.style.background = "transparent");
+
+dropzone?.addEventListener("drop", e => {
+  e.preventDefault();
+  dropzone.style.background = "transparent";
+  handleFileHash(e.dataTransfer.files[0]);
+});
+
+fileInput?.addEventListener("change", e => handleFileHash(e.target.files[0]));
+
+async function handleFileHash(file) {
+  if (!file) return;
+  const arrayBuffer = await file.arrayBuffer();
+  const hash = await computeHash("SHA-256", arrayBuffer);
+
+  fileHashResult.innerHTML = `✅ <strong>${file.name}</strong><br>SHA-256: <code>${hash}</code>`;
+}
+
+// ================================================================
+// ✅ VIN DECODER
+// ================================================================
+function openVinModal() {
+  document.getElementById("vinModal").style.display = "flex";
+}
+
+function closeVinModal() {
+  document.getElementById("vinModal").style.display = "none";
+}
+
+function decodeCorvetteVIN(vin) {
+  if (vin.length !== 17) return "❌ VIN must be 17 characters";
+
+  const year = { N: 2022 }[vin[9]] || "Unknown";
+  const plant = { "5": "Bowling Green, Kentucky" }[vin[10]] || "Unknown";
+  const model = vin.startsWith("1G1Y") ? "Chevy Corvette Stingray" : "Unknown Model";
+
+  return `Model: ${model}\nModel Year: ${year}\nAssembly Plant: ${plant}\nSequence: ${vin.slice(11)}`;
+}
+
+document.getElementById("vinInput")?.addEventListener("input", () => {
+  document.getElementById("vinResult").innerHTML =
+    `<pre>${decodeCorvetteVIN(vinInput.value.trim())}</pre>`;
+});
+
+// ================================================================
+// ✅ MINI-GAMES — Spot Tampering, Memory, Fraud
+// ================================================================
+function toggleSound() {
+  soundEnabled = !soundEnabled;
+  document.querySelector(".sound-toggle").textContent = soundEnabled ? "🔊" : "🔇";
+}
+
+function startGame(type) {
+  document.getElementById("gameBox").style.display = "block";
+
+  if (type === "tamper") return gameTamper();
+  if (type === "memory") return gameMemory();
+  if (type === "fraud") return gameFraud();
+}
+
+// --- Game 1: Spot Tampering ---
+function gameTamper() {
+  const original = "Approved VA Claim — Rating 70% — 2025-03-14";
+  const tampered = "Approved VA Claim — Rating 10% — 2025-03-14";
+
+  document.getElementById("gameBox").innerHTML = `
+    <h3>🕵️ Spot the Tampering</h3>
+    <p>Two records — one is altered. Which one fails integrity?</p>
+
+    <pre>${original}</pre>
+    <pre>${tampered}</pre>
+
+    <div style="display:flex; gap:10px; margin-top:14px;">
+      <button class="action-btn" onclick="checkTamper(true)">Top is Original ✅</button>
+      <button class="action-btn" onclick="checkTamper(false)">Bottom is Original ✅</button>
+    </div>
+
+    <div id="tamperResult" style="margin-top:16px;font-weight:600;"></div>
+  `;
+}
+
+function checkTamper(choice) {
+  const result = document.getElementById("tamperResult");
+  if (choice) result.textContent = "✅ Correct — NOVAK detects rating manipulation instantly.";
+  else result.textContent = "❌ Incorrect — silent benefit reduction could occur without NOVAK.";
+}
+
+// ================================================================
+// ✅ STRUCTURED DATA VALIDATION — JSON, XML, SQL
+// ================================================================
+document.getElementById("structuredFile")?.addEventListener("change", async e => {
+  const file = e.target.files[0];
+  if (!file) return;
+
+  const txt = await file.text();
+  const hash = await computeHash("SHA-256", txt);
+
+  document.getElementById("structuredResult").innerHTML =
+    `✅ File loaded — integrity proven\n\nSHA-256: ${hash}`;
+});
+
+// ================================================================
+// ✅ AI TRANSPARENCY VIEW
+// ================================================================
+function toggleTransparency() {
+  const panel = document.getElementById("transparencyView");
+  panel.style.display = panel.style.display === "none" ? "block" : "none";
+
+  panel.innerHTML =
+    `DATA ➜ RULE ➜ OUTPUT\n\nMathematically bound, cryptographically verified.`;
+}
+
+// ================================================================
+// ✅ EXECUTION RECEIPT GENERATOR
+// ================================================================
+async function generateReceipt() {
+  const input = document.getElementById("novakInput").value.trim();
+  if (!input) return alert("Enter something first!");
+
+  const sha = await computeHash("SHA-256", input);
+  const timestamp = new Date().toISOString();
+
+  document.getElementById("receiptOutput").textContent =
+`NOVAK Execution Integrity Receipt
+----------------------------------
+Timestamp: ${timestamp}
+SHA-256: ${sha}
+
+This proves what existed, when, and under what rules.`;
+}
+
+// ================================================================
+// ✅ Guided Auto-Scroll Story Mode
+// ================================================================
 const storySlides = [
   "Welcome — NOVAK fixes the world's most dangerous hidden problem: automation without proof.",
   "Today, software approves loans, surgeries, veteran benefits, procurement, sentencing — without verification.",
@@ -592,31 +922,26 @@ const storySlides = [
   "Proof-before-action becomes the new global safety standard."
 ];
 
-let storyIndex = 0;
-let storyInterval;
-
 function startStoryMode() {
   const panel = document.getElementById("storyPanel");
-  storyIndex = 0;
   panel.style.display = "block";
-  panel.textContent = storySlides[storyIndex];
-  panel.scrollIntoView({ behavior: "smooth" });
+  storyIndex = 0;
+  panel.textContent = storySlides[0];
 
   clearInterval(storyInterval);
 
   storyInterval = setInterval(() => {
     storyIndex++;
-    if (storyIndex >= storySlides.length) {
-      clearInterval(storyInterval);
-      return;
-    }
+    if (storyIndex >= storySlides.length) return clearInterval(storyInterval);
 
     panel.textContent = storySlides[storyIndex];
     panel.scrollIntoView({ behavior: "smooth" });
   }, 4500);
 }
 
-// ✅ Export One-Page Federal Briefing Sheet
+// ================================================================
+// ✅ Federal Briefing Sheet Export
+// ================================================================
 function exportBriefing() {
   const text =
 `NOVAK Protocol — Executive Briefing
@@ -650,9 +975,34 @@ Status: Patent pending — NOVAK Protocol™`;
 
   const blob = new Blob([text], { type: "text/plain" });
   const url = URL.createObjectURL(blob);
+
   const a = document.createElement("a");
   a.href = url;
   a.download = "NOVAK_Federal_Briefing.txt";
   a.click();
+
   URL.revokeObjectURL(url);
 }
+
+// ================================================================
+// ✅ GLORY TO GOD EXPANDER
+// ================================================================
+function toggleGlorySection() {
+  const box = document.getElementById("glorySection");
+  const show = box.style.display === "none";
+
+  box.style.display = show ? "block" : "none";
+
+  if (show) box.scrollIntoView({ behavior: "smooth" });
+}
+
+// ================================================================
+// ✅ INIT ON PAGE LOAD
+// ================================================================
+document.addEventListener("DOMContentLoaded", () => {
+  setAudience("public");
+  restoreWhyNovakOnLoad();
+  restoreWhatChangesOnLoad();
+  updateHashes();
+});
+</script>
